@@ -56,7 +56,7 @@ Contributions:
     * Amitai Schlair -- NetBSD package.
 
     * Robin S. Socha -- lots of TMDA advocacy, particularly in the
-      de.* newsgroups.
+      de.* newsgroups, and documentation (Gnus HOWTO).
 
     * Reuben Sumner -- original HMAC module.
 
