@@ -1,6 +1,6 @@
 <HTML>
 <!-- THIS PAGE IS AUTOMATICALLY GENERATED.  DO NOT EDIT. -->
-<!-- Wed May  1 14:56:28 2002 -->
+<!-- Fri May 17 18:54:02 2002 -->
 <!-- USING HT2HTML 1.2 -->
 <!-- SEE http://barry.wooz.org/software/ht2html -->
 <!-- User-specified headers:
@@ -148,6 +148,10 @@ Controlling SPAM under Mandrake Linux, Part 2</a><br><br>
 <li>Lou Hevly has written a 
 <a href="http://www.visca.com/tmda/tmda_vpop.html" TARGET="Resource Window">
 tutorial for installing TMDA with vpopmail</a><br><br>
+
+<li>Robin Socha has written a
+<a href="http://my.gnus.org/Members/robin/Doc/tmda" TARGET="Resource Window">
+Using Gnus with TMDA to reduce UCE</a> HOWTO<br><br>
 
 <li>Francisco Sam Castillo's 
 <a href="http://devel.samstech.net/" TARGET="Resource Window">QAdmin-TMDA</a> is
